# XYQQuiz

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.txt  config.example.json  pyproject.toml  requirements-release.in  requirements-release.txt
.github/workflows/: ci.yml  release.yml
data/: current.json
data/layouts/: keju-default.json  keju-exam-stable.json  keju-exam.json  keju-picture-stable.json  keju-picture.json
packaging/: README.txt  XYQQuiz.manifest  XYQQuiz.spec  state-schema.json  version_info.txt  一键自检.cmd
scripts/: build-release.ps1  check_public_tree.py  generate_build_manifest.py
src/xyq_quiz/: __init__.py  config.py  diagnostics.py  launcher.py  selftest.py
tests/: conftest.py
tests/fixtures/: questions-small.json
tests/integration/: test_actual_uvicorn_websocket.py  test_capture_service.py  test_coordinator.py  test_end_to_end_latency.py  test_rapidocr_smoke.py  test_real_fixture_cache_identity.py  test_recognition_fixtures.py  test_static_benchmark_path.py  test_updater_atomic.py  test_web_app.py
tests/unit/: test_acceptance_benchmark.py  test_activation.py  test_build_manifest.py  test_capture_models.py  test_config.py  test_coordinator_fingerprint.py  test_diagnostics.py  test_fixture_check_cli.py  test_frame_hub.py  test_launcher.py  test_layout.py  test_live_acceptance.py  test_matcher.py  test_ocr.py  test_packaging_contract.py  test_portable_runtime.py  test_public_tree_audit.py  test_question_store.py  test_real_fixture_pytest_gate.py  test_recognition_acceptance.py  test_recognition_pipeline.py  test_recognition_result_source.py  test_release_workflow.py  test_runtime_state.py  test_selftest.py  test_updater_parser.py  test_web_protocol.py  test_wgc.py  test_windowing.py
(+41 files in other folders)
